Add MainController_AddMainView
ajout de mainController et AddMainView